fixes role dropdown being cut off on admin page

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -22,6 +22,7 @@
 #user-table_wrapper {
     -webkit-transform: rotateX(180deg); /* Adding scrollbar flips all text, this flips it back. */
     font-size: 12px;
+    min-height: 290px;
 }
 
 .stats-grid{
